          search()es (originally added in 0.08100 but unmentioned)
        - Rewrite/unification of all subselecting limit emulations
          (RNO, Top, RowNum) to be much more robust wrt complex joined
          resultsets
        - MSSQL limits now don't require nearly as many applications of
          the unsafe_subselect_ok attribute, due to optimized queries
        - Fix as_subselect_rs to not inject resultset class-wide where
          conditions outside of the resulting subquery
        - Fix nasty potentially data-eating bug when deleting/updating
          a limited resultset
        - Depend on optimized SQL::Abstract (faster SQL generation)
        - update() on row not in_storage no longer throws an exception
          if there are no dirty columns to update (fixes cascaded update
          annoyances)
        - Update Schema::Versioned to respect hashref style of connection_info

0.08121 2010-04-11 18:43:00 (UTC)
        - Support for Firebird RDBMS with DBD::InterBase and ODBC
        - Add core support for INSERT RETURNING (for storages that
          supports this syntax, currently PostgreSQL and Firebird)
        - Fix spurious warnings on multiple UTF8Columns component loads
        - DBIx::Class::UTF8Columns entered deprecated state
        - DBIx::Class::InflateColumn::File entered deprecated state
        - DBIx::Class::Optional::Dependencies left experimental state
        - Add req_group_list to Opt::Deps (RT#55211)
        - Add support for mysql-specific STRAIGHT_JOIN (RT#55579)
        - Cascading delete/update are now wrapped in a transaction
          for atomicity
        - Fix accidental autovivification of ENV vars
        - Fix update_all and delete_all to be wrapped in a transaction
        - Fix multiple deficiencies when using MultiCreate with
          data-encoder components (e.g. ::EncodedColumn)
        - Fix regression where SQL files with comments were not
          handled properly by ::Schema::Versioned.